[gd_scene load_steps=14 format=3 uid="uid://cegwwloyfs8gr"]

[ext_resource type="Script" uid="uid://bftqewp0syhlo" path="res://scripts/imp.gd" id="1_65clq"]
[ext_resource type="Texture2D" uid="uid://cc8lpcgy7gc08" path="res://recouces/assets/spritesheets/imp.png" id="2_anvdd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rx5qb"]
atlas = ExtResource("2_anvdd")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr5ar"]
atlas = ExtResource("2_anvdd")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldn4r"]
atlas = ExtResource("2_anvdd")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggvys"]
atlas = ExtResource("2_anvdd")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_31vk8"]
atlas = ExtResource("2_anvdd")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7mvw"]
atlas = ExtResource("2_anvdd")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0xof"]
atlas = ExtResource("2_anvdd")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7my"]
atlas = ExtResource("2_anvdd")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gsfxc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rx5qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr5ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldn4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggvys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31vk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7mvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0xof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7my")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_52o5u"]
size = Vector2(11, 10.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o3fn6"]
size = Vector2(8.75, 9.625)

[node name="imp" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_65clq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_gsfxc")
animation = &"Run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_52o5u")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_o3fn6")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
